[package]
name = "tiny-interner"
version = "0.1.4"
authors = ["abs0luty"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abs0luty/tiny-interner"
documentation = "https://docs.rs/tiny-interner"
keywords = ["string", "interner", "symbol", "str"]
categories = ["data-structures"]
description = """Easy to use string interner with fast access to underlying strings 
and minimal memory footprint.
"""
edition = "2021"

[dependencies]
hashbrown = "0.13.2"
